--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,4 +1,8 @@
 FROM python:3.13-alpine
+RUN apk update && \
+    apk add --no-cache wget && \
+    apk add --no-cache build-base libffi-dev openssl-dev && \
+    apk add python3 py3-pip gcc musl-dev
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 EXPOSE 5000
