feat(api): Allow redirection to your Github page instead of getting a confirmation page. Changed the default SCREEN_DELAY value to 10 due to Github 1-minute cache feature, and split gitignore in rom and save to keep the folders in the repo

--- a/api/.env.sample
+++ b/api/.env.sample
@@ -1,5 +1,11 @@
-# Language for the API (supports only en and fr, default is en)
-LANGUAGE=en
-
 # The API rate limit for inputs (in requests per second, default is 2)
 RATE_LIMIT=2
+
+# Enable auto-redirection to your Github profile (default is false)
+AUTO_REDIRECT=false
+
+# Your Github username (required if AUTO_REDIRECT is true)
+GITHUB_USERNAME=
+
+# Language for the API (supports only en and fr, default is en, no effect if AUTO_REDIRECT=true)
+LANGUAGE=en
