--- a/pyboy/.env.sample
+++ b/pyboy/.env.sample
@@ -1,3 +1,4 @@
-# Delay between screenshots (in seconds, default: 5)
+# Delay between screenshots (in seconds, default: 10)
 # A low value may cause loading error more often on the client side
-SCREEN_DELAY=5
+# INFO: Github keeps the screen in cache for 1 minute
+SCREEN_DELAY=10
