feat(pyboy): Add a savestate backup feature in case of a save corruption, game.gbc files can be loaded, display an error if no rom found.
README.md now contains text !
Docker .env.sample and docker-compose now have a default port value of 5000 ;
Change description in api .env.sample, language actually has an effect on the default offline screen even if redirection is enabled ;

--- a/api/.env.sample
+++ b/api/.env.sample
@@ -7,5 +7,5 @@ AUTO_REDIRECT=false
 # Your Github username (required if AUTO_REDIRECT is true)
 GITHUB_USERNAME=
 
-# Language for the API (supports only en and fr, default is en, no effect if AUTO_REDIRECT=true)
+# Language for the API (supports only en and fr, default is en)
 LANGUAGE=en
